# centro-diagnostico-v12

./: .dockerignore  .env.example  .gitignore  .railwayignore  COMPATIBILIDAD.md  DEPLOYMENT.md  README.md  createAdmin.js  jest.config.js  package-lock.json  package.json  server.js  tailwind.config.js
.github/: copilot-instructions.md
agentes/agente-lab-app/src-tauri/: Cargo.toml  agente-lab-app.exe.manifest  tauri.conf.json
agentes/agente-lab-app/src-tauri/src/: lib.rs  main.rs
app/: globals.css  layout.tsx  page.tsx
components/: dashboard.tsx  header.tsx  login.tsx  sidebar.tsx
config/: db.js  swagger.js
controllers/: adminController.js  authController.js  citaController.js  contabilidadController.js  dashboardController.js  equipoController.js  estudioController.js  facturaController.js  imagenologiaController.js  notificacionController.js  pacienteController.js  resultadoController.js  turnoCajaController.js
docker/: Dockerfile.backend  Dockerfile.frontend  docker-compose.yml  nginx.conf
docs/: DEPLOY_ENV_MATRIX.md  DEPLOY_SAFE_CHECKLIST.md  SAAS_EMPTY_PRE_RELEASE_CHECKLIST.md  SEEDS_INTERNAL_ONLY.md  SMOKE_TEST_MATRIX.md
frontend/: .env.tauri  .gitignore  package-lock.json  package.json  tailwind.config.js  vercel.json
lib/: auth-context.tsx  mock-data.ts
middleware/: auth.js  equipoApiKey.js  sucursal.js  validators.js
models/: AgenteLog.js  AuditLog.js  Configuracion.js  Equipo.js  Estudio.js  Factura.js  OrdenEquipo.js  Paciente.js  Resultado.js  User.js
monitor-comunicaciones/: .gitignore  README.md  build-exe.bat  config.json  (+5 more)
(+116 files in other folders)
