[package]
name = "agente-lab-app"
version = "1.0.0"
description = "Agente de Laboratorio — Centro Médico Esperanza"
authors = ["Centro Médico Esperanza"]
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "agente_lab_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-log = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
serialport = "4"
